test/functions/firstClassFns/overloaded.good
overloaded.chpl:10: error: foo: can not capture overloaded functions as values
